# spectracles

./: README.md  pyproject.toml
.github/workflows/: release.yml
src/modelling_lib/: __init__.py  data.py  graph.py  io.py  kernels.py  leaf_sharing.py  optimise.py  parameter.py  path_utils.py  spatial.py  spatial.py.bak  spectral.py
src/modelling_lib/model/: data.py  graph.py  io.py  kernels.py  parameter.py  share_module.py  spatial.py  spectral.py
src/modelling_lib/optimise/: opt_frame.py  opt_schedule.py  optimiser_frame.py
src/spectracles/model/: graph.py  share_module.py
src/spectracles/spectrospatial/: __init__.py
tests/: __init__.py  conftest.py  test_data.py  test_integration.py  test_io.py  test_kernels.py  test_leaf_sharing.py  test_models.py  test_optimise.py  test_parameter.py  test_spatial.py  test_spectral.py
