[project]
name = "modelling-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Tom Hilder", email = "tom.hilder.dlhp@gmail.com" }]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
